fixed stepnumber vertical align

--- a/app/styles/_trek-detail.scss
+++ b/app/styles/_trek-detail.scss
@@ -107,8 +107,8 @@
 
 .step-number {
     display: inline-block;
-    min-width: 1.4em;
-    height: 1.4em;
+    min-width: 1.55em;
+    height: 1.55em;
     padding: 0.2rem;
     background: $primaryColor;
     color: white;
